--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header{
 	text-align: left;
 	top: 1.7rem;
 	left: 5rem;
-	width: 80rem;
+	width: 80%;
 	height: 65vh;
 	margin-top: 2.2rem;
 	transition: .6s;
