--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ header{
 	display: inline-block;
 	margin-top: 2rem;
 	margin-right: 4rem;
-	padding: 1rem;
+	padding: .2rem;
 }
 .navbar-dropdown-list span{
 	position: relative;
